--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter city name" spellcheck="false">
-            <button> <img src="./search (1).png" alt="" height="50px" width="100"></button>
+            <button id="searchbtn"> <img src="./search (1).png" alt="" height="80px" width="140px" ></button>
         </div>
         <div class="error">
             <p>Invalid city name</p>
@@ -41,56 +41,7 @@
             </div>
         </div>
     </div>
-    <script>
-        const apikey = "b49533be070882ed4d77e77fdb29b44c";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
-
-        const searchBox = document.querySelector(".search input");
-        const searchBtn = document.querySelector(".search button");
-        const weatherIcon = document.querySelector(".weather-icon");
-
-        async function checkWeather(city) {
-            const response = await fetch(apiUrl + city + `&appid=${apikey}`);
-
-            if (response.status == 404) {
-                document.querySelector(".error").style.display = "block";
-                document.querySelector(".weather").style.display = "none";
-            } else{
-                var data = await response.json();
-
-            document.querySelector(".city").innerHTML = data.name;
-            document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
-            document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
-            document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
-
-            if (data.weather[0].main == "clouds") {
-                WeatherIcon.src=""
-            }
-            else if (data.weather[0].main == "clear") {
-                WeatherIcon.src = "clear.png";
-            }
-            else if (data.weather[0].main == "rain") {
-                WeatherIcon.src = "WHEATHER APP/weather rain image.png";
-            }
-            else if (data.weather[0].main == "Drizzle") {
-                WeatherIcon.src = "WHEATHER APP/drizzle.png";
-            }
-            else if (data.weather[0].main == "mist") {
-                WeatherIcon.src = "WHEATHER APP/misty.png";
-            }
-            document.querySelector(".weather").style.display = "block";
-            document.querySelector(".error").style.display = "none";
-        }
-        
-    }
-
-
-
-        searchBtn.addEventListener("click", () => {
-            checkWeather(searchBox.value);
-        })
-
-    </script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
